# human_body_prior

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_old.txt  setup.py  test.py
data/: body_dataloader.py  create_body_datasets.py
human_body_prior/body_model/: README.md  body_model.py  body_model_vposer.py  lbs.py  rigid_object_model.py
human_body_prior/cluster/: train_single.sh  vposer_train_condor.sh  vposer_train_jobs.py  vposer_train_local.sh
human_body_prior/data/: README.md  body_dataloader.py  create_body_datasets.py  dataloader.py  prepare_data.py
human_body_prior/evaluate/: run_testset.py  smplify_test.sh
human_body_prior/evaluations/: run_on_amass.py
human_body_prior/mesh/: __init__.py  mesh_viewer.py  sphere.py
human_body_prior/models/: vposer_smpl_pt.py
human_body_prior/tools/: model_loader.py  omni_tools.py  training_tools.py  visualization_tools.py  viz_tools.py  vposer_loader_pt.py
human_body_prior/train/: README.md  train_vposer_smpl.py  vposer_single_trainer.py  vposer_smpl.py  (+3 more)
models/: vposer_defaults.ini  vposer_smpl_pt.py
notebooks/: fit_smpl_to_joints.py  human_body_ik.py  notebook_tools.py  sample_body_pose.py  vposer.ipynb  vposer_decoder.ipynb  vposer_poZ.ipynb  vposer_sampling.ipynb
tests/: test_angle_continuous_repres.py  test_import.py  test_rotations.py  test_vposer.py
tools/: body_model.py  lbs.py  viz_tools.py  vposer_loader_pt.py
tutorials/: ik_example_joints.py  ik_example_mocap.py  mdm_motion2smpl.py  sample_body_pose.py  vposer.ipynb  vposer_sampling.ipynb
(+26 files in other folders)
